Add cache-busting query parameter to main.js

--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,8 @@ Our mission is to take every topic — from core mechanisms to real-world decisi
             </div>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="main.js?v=2"></script>
+
 
 </body>
 </html>
