--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@ Our mission is to take every topic — from core mechanisms to real-world decisi
             </div>
         </div>
     </div>
-    <script src="main_v3.js"></script>
+    <script src="main.js"></script>
 
 
 </body>
