--- a/index.html
+++ b/index.html
@@ -1013,6 +1013,8 @@
             <div class="categories" id="dynamicHomeCategories">
                 <div id="subcategoriesGrid"></div>
             </div>
+        </div>
+        
 
 
         <!-- Category Page -->
